--- a/_blocks/who.html
+++ b/_blocks/who.html
@@ -1,7 +1,7 @@
 ---
-title: Wie is de leemsmid?
+title: Over de leemsmid
 menu: true
-weight: 4
+weight: 2
 ---
-<div class="text">{{ site.about_text }}</div>
 <img alt="Wie is de leemsmid?" src="//images.weserv.nl/?url={{ site.about_image }}&w=300&h=300&fit=cover&a=attention">
+<div class="text">{{ site.about_text | markdownify }}</div>
