--- a/_blocks/contact.html
+++ b/_blocks/contact.html
@@ -1,7 +1,12 @@
 ---
 title: Contact
-menu: false
+menu: true
 weight: 5
 ---
-<a href="tel:{{ site.phone }}">{{ site.phone }}</a>
-<a href="mailto:{{ site.email }}">{{ site.email }}</a>
+<div class="text">
+  {{ site.contact | markdownify }}
+</div>
+<div class="buttons">
+  <a class="button small" href="tel:{{ site.phone }}"><strong>Tel:</strong>&nbsp;{{ site.phone }}</a><br>
+  <a class="button small" href="mailto:{{ site.email }}"><strong>Email:</strong>&nbsp;{{ site.email }}</a>
+</div>
