--- a/_blocks/contact.html
+++ b/_blocks/contact.html
@@ -10,3 +10,5 @@ weight: 5
   <a class="button small" href="tel:{{ site.phone }}"><strong>Tel:</strong>&nbsp;{{ site.phone }}</a><br>
   <a class="button small" href="mailto:{{ site.email }}"><strong>Email:</strong>&nbsp;{{ site.email }}</a>
 </div>
+
+{% include image.html class="footer-image" src=site.footer_image alt="Contact met de Leemsmid" width=600 height=600 %}
