--- a/_blocks/who.html
+++ b/_blocks/who.html
@@ -3,5 +3,5 @@ title: Over de leemsmid
 menu: true
 weight: 2
 ---
-<img alt="Wie is de leemsmid?" src="//images.weserv.nl/?url={{ site.about_image }}&w=300&h=300&fit=cover&a=attention">
+{% include image.html src=site.about_image alt="Wie is de leemsmid?" %}
 <div class="text">{{ site.about_text | markdownify }}</div>
