fixing bottom image

--- a/_blocks/contact.html
+++ b/_blocks/contact.html
@@ -11,4 +11,4 @@ weight: 5
   <a class="button small" href="mailto:{{ site.email }}"><strong>Email:</strong>&nbsp;{{ site.email }}</a>
 </div>
 
-{% include image.html class="footer-image" src=site.footer_image alt="Contact met de Leemsmid" width=600 height=600 %}
+{% include image.html class="footer-image" width="auto" src=site.footer_image alt="Contact met de Leemsmid" width=600 height=600 %}
